--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
     <string name="start_chat"> Start Chat </string>
     <string name="end_chat"  > End Chat   </string>
 
-    <string name="test_button1"> TEST BUTTON #1 </string>
-    <string name="test_button2"> EMERGENCY STOP </string>
-    <string name="test_button3"> TEST BUTTON #3 </string>
+    <string name="test_button1"> TEST YES NOD </string>
+    <string name="test_button2"> EMERGENCY STOP MOTORS </string>
+    <string name="test_button3"> TEST ROTATE BUDDY </string>
+    <string name="test_button4"> RESET HEAD X/Y </string>
 
     <string name="no_profile"  tools:ignore="TypographyEllipsis"> Not logged in yet...          </string>
     <string name="logging_in"  tools:ignore="TypographyEllipsis"> Signing in...                 </string>
