--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name"  > BuddyChat  </string>
-    <string name="start_chat"> Start Chat </string>
-    <string name="end_chat"  > End Chat   </string>
+    <string name="app_name"  > BuddyChat v2 </string>
+    <string name="start_chat"> Start Chat   </string>
+    <string name="end_chat"  > End Chat     </string>
 
     <string name="test_button1"> TEST YES NOD </string>
     <string name="test_button2"> EMERGENCY STOP MOTORS </string>
